[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/main_menu_ice_cream_board_.png" type="Texture" id=1]
[ext_resource path="res://Assets/ui/board.png" type="Texture" id=2]
[ext_resource path="res://MatchupPro.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Objects/MusicButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/ui/menu_button.png" type="Texture" id=5]
[ext_resource path="res://Assets/ui/menu_button_pressed.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=7]
[ext_resource path="res://Assets/ui/how_to_4.png" type="Texture" id=8]
[ext_resource path="res://Sound/hand_coming.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/ui/how_to_1.png" type="Texture" id=10]
[ext_resource path="res://Assets/ui/how_to_2.png" type="Texture" id=11]
[ext_resource path="res://Assets/ui/how_to_3.png" type="Texture" id=12]
[ext_resource path="res://Assets/ui/how_to_5.png" type="Texture" id=13]
[ext_resource path="res://Sound/fall.wav" type="AudioStream" id=15]
[ext_resource path="res://Sound/board_add.wav" type="AudioStream" id=16]
[ext_resource path="res://Sound/melt.wav" type="AudioStream" id=17]
[ext_resource path="res://Sound/warning.wav" type="AudioStream" id=18]
[ext_resource path="res://Sound/board_change.wav" type="AudioStream" id=19]
[ext_resource path="res://Sound/select_button.wav" type="AudioStream" id=20]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0588235, 0.352941, 0.388235, 0.862745 )

[sub_resource type="DynamicFont" id=5]
size = 12
extra_spacing_bottom = -3
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 7 )

[node name="SoundManager" type="Node2D" parent="."]

[node name="board_new_added" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 16 )

[node name="board_changed" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 19 )

[node name="fall" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 15 )

[node name="melt" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 17 )

[node name="select" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 20 )

[node name="warning" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 18 )

[node name="hand" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 9 )

[node name="Menu" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="Menu"]

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_right = 512.0
margin_bottom = 300.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Board" type="TextureRect" parent="Menu"]
margin_left = 128.0
margin_top = 12.0
margin_right = 256.0
margin_bottom = 72.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="Menu/Board"]
margin_left = 35.0
margin_top = 16.0
margin_right = 124.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.372549, 0.431373, 1 )
custom_colors/font_outline_modulate = Color( 0.439216, 0.784314, 0.823529, 1 )
custom_colors/font_color_shadow = Color( 0.298039, 0.407843, 0.423529, 1 )
text = "ICECREAM"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header2" type="Label" parent="Menu/Board"]
margin_left = 35.0
margin_top = 29.0466
margin_right = 124.0
margin_bottom = 48.0466
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.439216, 0.784314, 0.823529, 1 )
custom_colors/font_outline_modulate = Color( 0.439216, 0.784314, 0.823529, 1 )
custom_colors/font_color_shadow = Color( 0.298039, 0.407843, 0.423529, 1 )
text = "SURVIVAL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 134.0
margin_top = 132.0
margin_right = 378.0
margin_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="Menu/VBoxContainer"]
margin_right = 244.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 25 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/VBoxContainer/PlayButton"]
margin_left = 59.0
margin_right = 184.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.439216, 0.784314, 0.823529, 1 )
custom_colors/font_color_shadow = Color( 0.298039, 0.407843, 0.423529, 1 )
text = "PLAY"
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToButton" type="TextureButton" parent="Menu/VBoxContainer"]
margin_top = 29.0
margin_right = 244.0
margin_bottom = 54.0
rect_min_size = Vector2( 200, 25 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/VBoxContainer/HowToButton"]
margin_left = 59.0
margin_right = 184.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.439216, 0.784314, 0.823529, 1 )
custom_colors/font_color_shadow = Color( 0.298039, 0.407843, 0.423529, 1 )
text = "SETTINGS"
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HowToPlay" type="Control" parent="CanvasLayer"]
margin_top = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/HowToPlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 200.0
margin_right = 512.0
margin_bottom = 284.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HowToPlay/Panel"]
margin_top = -15.0454
margin_right = 512.0
margin_bottom = 70.9546
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Howto1" type="TextureRect" parent="CanvasLayer/HowToPlay/Panel/HBoxContainer"]
margin_left = 23.0
margin_right = 113.0
margin_bottom = 86.0
rect_min_size = Vector2( 90, 86 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/HowToPlay/Panel/HBoxContainer/Howto1"]
margin_top = 64.0
margin_right = 88.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.486275, 0.701961, 0.729412, 1 )
custom_colors/font_color_shadow = Color( 0.0588235, 0.352941, 0.388235, 1 )
text = "ICE CREAM
FOLLOWS YOUR CURSOR."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Howto2" type="TextureRect" parent="CanvasLayer/HowToPlay/Panel/HBoxContainer"]
margin_left = 117.0
margin_right = 207.0
margin_bottom = 86.0
rect_min_size = Vector2( 90, 86 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/HowToPlay/Panel/HBoxContainer/Howto2"]
margin_top = 64.0
margin_right = 88.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.486275, 0.701961, 0.729412, 1 )
custom_colors/font_color_shadow = Color( 0.0588235, 0.352941, 0.388235, 1 )
text = "BE CAREFUL ABOUT THE HEAT!
"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Howto3" type="TextureRect" parent="CanvasLayer/HowToPlay/Panel/HBoxContainer"]
margin_left = 211.0
margin_right = 301.0
margin_bottom = 86.0
rect_min_size = Vector2( 90, 86 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/HowToPlay/Panel/HBoxContainer/Howto3"]
margin_top = 64.0
margin_right = 88.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.486275, 0.701961, 0.729412, 1 )
custom_colors/font_color_shadow = Color( 0.0588235, 0.352941, 0.388235, 1 )
text = "TO COOL DOWN ENTER THE OPEN PLATFORMS.
"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Howto5" type="TextureRect" parent="CanvasLayer/HowToPlay/Panel/HBoxContainer"]
margin_left = 305.0
margin_right = 395.0
margin_bottom = 86.0
rect_min_size = Vector2( 90, 86 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/HowToPlay/Panel/HBoxContainer/Howto5"]
margin_top = 64.0
margin_right = 88.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.486275, 0.701961, 0.729412, 1 )
custom_colors/font_color_shadow = Color( 0.0588235, 0.352941, 0.388235, 1 )
text = "STAY AWAY FROM HANDS!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Howto4" type="TextureRect" parent="CanvasLayer/HowToPlay/Panel/HBoxContainer"]
margin_left = 399.0
margin_right = 489.0
margin_bottom = 86.0
rect_min_size = Vector2( 90, 86 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/HowToPlay/Panel/HBoxContainer/Howto4"]
margin_top = 64.0
margin_right = 88.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.486275, 0.701961, 0.729412, 1 )
custom_colors/font_color_shadow = Color( 0.0588235, 0.352941, 0.388235, 1 )
text = "GAME ENDS WHEN YOU FALL OR MELT!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" parent="CanvasLayer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 300.0
margin_right = 24.0
margin_bottom = 324.0
[connection signal="pressed" from="Menu/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/HowToButton" to="." method="_on_HowToButton_pressed"]
